# decloud

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: dev.Dockerfile  prod.Dockerfile
