[tool.poetry]
name = "decloud"
version = "0.1.0"
description = "declutter your cloud"
authors = ["Surya Avala <suryaavala.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/suryaavala/decloud"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
mypy = "^1.0.0"
black = "^23.1.0"
isort = "^5.12.0"
bandit = "^1.7.4"
pytest-cov = "^4.0.0"
mkdocs = "^1.4.2"
pre-commit = "^3.0.4"


[tool.poetry.group.aws.dependencies]
boto3 = "^1.26.69"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# isort config
[tool.isort]
profile = "black"

# pytest config
[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = "test_*.py"
addopts = ["-vvv", "--strict-markers", "--disable-pytest-warnings", "--color=yes", "--capture=tee-sys", "--cov-fail-under=0", "--cov-report=term-missing", "--cov=powr"]


# pytest coverage config
[tool.coverage.run]
source = ["decloud"]
omit = ["*/__init__.py", "tests/*"]
# omit = ["app/gunicorn.py"]

# mypy config
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# module = ["matplotlib", "numpy", "pandas", "seaborn", "tensorflow", "sklearn", "joblib", "sklearn.preprocessing"]
ignore_missing_imports = true
